added loggers
